bin/testsuite/tests/compiler/src/errors/compiler1853.swg
#global testerror "Err0610"

#message(0)
{
}
